@@ -116,6 +116,7 @@
 *                   CR-965028.
 * 3.5 hk    08/14/17 Dont perform data cache operations when CCI is enabled
 *                    on ZynqMP.
+* 3.8 hk    10/01/18 Fix warning for redefinition of interrupt number.
 *
 * </pre>
 *
@@ -143,25 +144,22 @@
 #define INTC		XIntc
 #define EMACPS_DEVICE_ID	XPAR_XEMACPS_0_DEVICE_ID
 #define INTC_DEVICE_ID		XPAR_INTC_0_DEVICE_ID
-#define EMACPS_IRPT_INTR	XPAR_AXI_INTC_0_PROCESSING_SYSTEM7_0_IRQ_P2F_ENET0_INTR
 #else
 #define INTC		XScuGic
 #define EMACPS_DEVICE_ID	XPAR_XEMACPS_0_DEVICE_ID
 #define INTC_DEVICE_ID		XPAR_SCUGIC_SINGLE_DEVICE_ID
-#define EMACPS_IRPT_INTR	XPS_GEM0_INT_ID
 #endif
 
-#ifdef XPAR_PSU_ETHERNET_3_DEVICE_ID
-#define EMACPS_IRPT_INTR	XPS_GEM3_INT_ID
-#endif
-#ifdef XPAR_PSU_ETHERNET_2_DEVICE_ID
-#define EMACPS_IRPT_INTR	XPS_GEM2_INT_ID
-#endif
-#ifdef XPAR_PSU_ETHERNET_1_DEVICE_ID
-#define EMACPS_IRPT_INTR	XPS_GEM1_INT_ID
-#endif
-#ifdef XPAR_PSU_ETHERNET_0_DEVICE_ID
+#if defined(XPAR_INTC_0_DEVICE_ID)
+#define EMACPS_IRPT_INTR	XPAR_AXI_INTC_0_PROCESSING_SYSTEM7_0_IRQ_P2F_ENET0_INTR
+#elif defined(XPAR_PSU_ETHERNET_0_DEVICE_ID) || defined(XPAR_PS7_ETHERNET_0_DEVICE_ID)
 #define EMACPS_IRPT_INTR	XPS_GEM0_INT_ID
+#elif defined(XPAR_PSU_ETHERNET_1_DEVICE_ID) || defined(XPAR_PS7_ETHERNET_1_DEVICE_ID)
+#define EMACPS_IRPT_INTR	XPS_GEM1_INT_ID
+#elif defined(XPAR_PSU_ETHERNET_2_DEVICE_ID)
+#define EMACPS_IRPT_INTR	XPS_GEM2_INT_ID
+#elif defined(XPAR_PSU_ETHERNET_3_DEVICE_ID)
+#define EMACPS_IRPT_INTR	XPS_GEM3_INT_ID
 #endif
 
 #define RXBD_CNT       32	/* Number of RxBDs to use */
